--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </li>
   <!-- Telegram -->
   <li class="navigation__item">
-    <a target="_blank" href="https://t.me/ReliefShinAi" title="テレグラム">
+    <a target="_blank" href="https://t.me/sech_ayaya" title="テレグラム">
       <i class="social fab fa-telegram" style="color:rgb(133, 161, 214)"></i>
     </a>
   </li>
